WebCore/rendering/FixedTableLayout.cpp
@@ -36,29 +36,29 @@
 
   With this (fast) algorithm, the horizontal layout of the table does
   not depend on the contents of the cells; it only depends on the
-  table's m_width, the m_width of the columns, and borders or cell
+  table's width, the width of the columns, and borders or cell
   spacing.
 
-  The table's m_width may be specified explicitly with the 'm_width'
+  The table's width may be specified explicitly with the 'width'
   property. A value of 'auto' (for both 'display: table' and 'display:
   inline-table') means use the automatic table layout algorithm.
 
-  In the fixed table layout algorithm, the m_width of each column is
+  In the fixed table layout algorithm, the width of each column is
   determined as follows:
 
-    1. A column element with a value other than 'auto' for the 'm_width'
-    property sets the m_width for that column.
+    1. A column element with a value other than 'auto' for the 'width'
+    property sets the width for that column.
 
     2. Otherwise, a cell in the first row with a value other than
-    'auto' for the 'm_width' property sets the m_width for that column. If
-    the cell spans more than one column, the m_width is divided over the
+    'auto' for the 'width' property sets the width for that column. If
+    the cell spans more than one column, the width is divided over the
     columns.
 
     3. Any remaining columns equally divide the remaining horizontal
     table space (minus borders or cell spacing).
 
-  The m_width of the table is then the greater of the value of the
-  'm_width' property for the table element and the sum of the column
+  The width of the table is then the greater of the value of the
+  'width' property for the table element and the sum of the column
   widths (plus cell spacing or borders). If the table is wider than
   the columns, the extra space should be distributed over the columns.
 
@@ -68,13 +68,6 @@
   not affect column widths. Any cell that has content that overflows
   uses the 'overflow' property to determine whether to clip the
   overflow content.
-
-_____________________________________________________
-
-  This is not quite true when comparing to IE. IE always honours
-  table-layout:fixed and treats a variable table m_width as 100%. Makes
-  a lot of sense, and is implemented here the same way.
-
 */
 
 using namespace std;
@@ -83,10 +76,6 @@ namespace WebCore {
 
 FixedTableLayout::FixedTableLayout(RenderTable* table)
     : TableLayout(table)
-{
-}
-
-FixedTableLayout::~FixedTableLayout()
 {
 }
 
@@ -127,7 +116,7 @@ int FixedTableLayout::calcWidthArray(int tableWidth)
                     }
                     int eSpan = m_table->spanOfEffCol(cCol+i);
                     if ((w.isFixed() || w.isPercent()) && w.isPositive()) {
-                        m_width[cCol+i].setRawValue(w.type(), w.rawValue() * eSpan);
+                        m_width[cCol + i].setRawValue(w.type(), w.rawValue() * eSpan);
                         usedWidth += effWidth * eSpan;
                     }
                     usedSpan += eSpan;
@@ -148,38 +137,36 @@ int FixedTableLayout::calcWidthArray(int tableWidth)
         child = next;
     }
 
-    // iterate over the first row in case some are unspecified.
+    // Iterate over the first row in case some are unspecified.
     RenderTableSection* section = m_table->header();
     if (!section)
         section = m_table->firstBody();
     if (!section)
         section = m_table->footer();
+    if (!section->numRows())
+        section = m_table->sectionBelow(section, true);
     if (section) {
         cCol = 0;
-        // FIXME: Technically the first row could be in an arbitrary section (e.g., an nth section
-        // if the previous n-1 sections have no rows), so this check isn't good enough.
-        // get the first cell in the first row
         RenderObject* firstRow = section->firstChild();
-        child = firstRow ? firstRow->firstChild() : 0;
+        child = firstRow->firstChild();
         while (child) {
             if (child->isTableCell()) {
-                RenderTableCell *cell = static_cast<RenderTableCell *>(child);
+                RenderTableCell* cell = static_cast<RenderTableCell*>(child);
                 Length w = cell->styleOrColWidth();
                 int span = cell->colSpan();
                 int effWidth = 0;
-                // FIXME: This does not make sense (mixing percentages with absolute length)
-                if ((w.isFixed() || w.isPercent()) && w.isPositive())
-                    effWidth = w.isPercent() ? w.rawValue() / percentScaleFactor : w.value();
+                if (w.isFixed() && w.isPositive())
+                    effWidth = w.value();
                 
                 int usedSpan = 0;
                 int i = 0;
                 while (usedSpan < span) {
                     ASSERT(cCol + i < nEffCols);
-                    int eSpan = m_table->spanOfEffCol(cCol+i);
-                    // only set if no col element has already set it.
-                    if (m_width[cCol+i].isAuto() && w.type() != Auto) {
-                        m_width[cCol+i].setRawValue(w.type(), w.rawValue() * eSpan);
-                        usedWidth += effWidth*eSpan;
+                    int eSpan = m_table->spanOfEffCol(cCol + i);
+                    // Only set if no col element has already set it.
+                    if (m_width[cCol + i].isAuto() && w.type() != Auto) {
+                        m_width[cCol + i].setRawValue(w.type(), w.rawValue() * eSpan / span);
+                        usedWidth += effWidth * eSpan / span;
                     }
                     usedSpan += eSpan;
                     i++;
@@ -191,7 +178,6 @@ int FixedTableLayout::calcWidthArray(int tableWidth)
     }
 
     return usedWidth;
-
 }
 
 void FixedTableLayout::calcMinMaxWidth(int& minWidth, int& maxWidth)
@@ -201,10 +187,10 @@ void FixedTableLayout::calcMinMaxWidth(int& minWidth, int& maxWidth)
     // we might want to wait until we have all of the first row before
     // layouting for the first time.
 
-    // only need to calculate the minimum m_width as the sum of the
-    // cols/cells with a fixed m_width.
+    // only need to calculate the minimum width as the sum of the
+    // cols/cells with a fixed width.
     //
-    // The maximum m_width is max(minWidth, tableWidth).
+    // The maximum width is max(minWidth, tableWidth).
     int bs = m_table->bordersPaddingAndSpacing();
     
     int tableWidth = m_table->style()->width().isFixed() ? m_table->style()->width().value() - bs : 0;
@@ -217,74 +203,86 @@ void FixedTableLayout::calcMinMaxWidth(int& minWidth, int& maxWidth)
 void FixedTableLayout::layout()
 {
     int tableWidth = m_table->width() - m_table->bordersPaddingAndSpacing();
-    int available = tableWidth;
     int nEffCols = m_table->numEffCols();
-    int totalPercent = 0;
+    Vector<int> calcWidth(nEffCols, 0);
 
-    Vector<int> calcWidth(nEffCols, -1);
+    int numAuto = 0;
+    int totalFixedWidth = 0;
+    int totalPercentWidth = 0;
+    int totalRawPercent = 0;
 
-    // assign  percent m_width
-    if (available > 0) {
-        for (int i = 0; i < nEffCols; i++)
-            if (m_width[i].isPercent())
-                totalPercent += m_width[i].rawValue();
-
-        // calculate how much to distribute to percent cells.
-        int base = tableWidth * totalPercent / (100 * percentScaleFactor);
-        if (base > available)
-            base = available;
-        else
-            totalPercent = 100 * percentScaleFactor;
-
-        for (int i = 0; available > 0 && i < nEffCols; i++) {
-            if (m_width[i].isPercent()) {
-                int w = base * m_width[i].rawValue() / totalPercent;
-                available -= w;
-                calcWidth[i] = w;
-            }
-        }
-    }
-    
-    // next assign fixed m_width
+    // Compute requirements and try to satisfy fixed and percent widths.
+    // Percentages are of the table's width, so for example
+    // for a table width of 100px with columns (40px, 10%), the 10% compute
+    // to 10px here, and will scale up to 20px in the final (80px, 20px).
     for (int i = 0; i < nEffCols; i++) {
         if (m_width[i].isFixed()) {
             calcWidth[i] = m_width[i].value();
-            available -= m_width[i].value();
-        }
+            totalFixedWidth += calcWidth[i];
+        } else if (m_width[i].isPercent()) {
+            calcWidth[i] = m_width[i].calcValue(tableWidth);
+            totalPercentWidth += calcWidth[i];
+            totalRawPercent += m_width[i].rawValue();
+        } else if (m_width[i].isAuto())
+            numAuto++;
     }
 
-    // assign variable m_width
-    if (available > 0) {
-        int totalAuto = 0;
-        for (int i = 0; i < nEffCols; i++)
-            if (m_width[i].isAuto())
-                totalAuto++;
-
-        for (int i = 0; available > 0 && i < nEffCols; i++) {
+    int totalWidth = totalFixedWidth + totalPercentWidth;
+    if (!numAuto || totalWidth > tableWidth) {
+        // If there are no auto columns, or if the total is too wide, take
+        // what we have and scale it to fit as necessary.
+        if (totalWidth != tableWidth) {
+            // Fixed widths only scale up
+            if (totalFixedWidth && totalWidth < tableWidth) {
+                totalFixedWidth = 0;
+                for (int i = 0; i < nEffCols; i++) {
+                    if (m_width[i].isFixed()) {
+                        calcWidth[i] = calcWidth[i] * tableWidth / totalWidth;
+                        totalFixedWidth += calcWidth[i];
+                    }
+                }
+            }
+            if (totalRawPercent) {
+                totalPercentWidth = 0;
+                for (int i = 0; i < nEffCols; i++) {
+                    if (m_width[i].isPercent()) {
+                        calcWidth[i] = m_width[i].rawValue() * (tableWidth - totalFixedWidth) / totalRawPercent;
+                        totalPercentWidth += calcWidth[i];
+                    }
+                }
+            }
+            totalWidth = totalFixedWidth + totalPercentWidth;
+        }
+    } else {
+        // Divide the remaining width among the auto columns.
+        int remainingWidth = tableWidth - totalFixedWidth - totalPercentWidth;
+        int lastAuto = 0;
+        for (int i = 0; i < nEffCols; i++) {
             if (m_width[i].isAuto()) {
-                int w = available / totalAuto;
-                available -= w;
-                calcWidth[i] = w;
-                totalAuto--;
+                calcWidth[i] = remainingWidth / numAuto;
+                remainingWidth -= calcWidth[i];
+                if (!remainingWidth)
+                    break;
+                lastAuto = i;
+                numAuto--;
             }
         }
+        // Last one gets the remainder.
+        if (remainingWidth)
+            calcWidth[lastAuto] += remainingWidth;
+        totalWidth = tableWidth;
     }
 
-    for (int i = 0; i < nEffCols; i++)
-        if (calcWidth[i] <= 0)
-            calcWidth[i] = 0; // IE gives min 1 px...
-
-    // spread extra space over columns
-    if (available > 0) {
+    if (totalWidth < tableWidth) {
+        // Spread extra space over columns.
+        int remainingWidth = tableWidth - totalWidth;
         int total = nEffCols;
-        // still have some m_width to spread
-        int i = nEffCols;
-        while ( i--) {
-            int w = available / total;
-            available -= w;
-            total--;
-            calcWidth[i] += w;
+        while (total) {
+            int w = remainingWidth / total;
+            remainingWidth -= w;
+            calcWidth[--total] += w;
         }
+        calcWidth[nEffCols - 1] += remainingWidth;
     }
     
     int pos = 0;
@@ -293,9 +291,7 @@ void FixedTableLayout::layout()
         m_table->columnPositions()[i] = pos;
         pos += calcWidth[i] + hspacing;
     }
-    m_table->columnPositions()[m_table->columnPositions().size()-1] = pos;
+    m_table->columnPositions()[m_table->columnPositions().size() - 1] = pos;
 }
-
-#undef DEBUG_LAYOUT
 
 } // namespace WebCore
